# MakineAI-Plugin-Template

./: .gitignore  CMakeLists.txt  README.md  makine-pack.py  manifest.json  plugin.cpp
include/makine/plugin/: plugin_api.h  plugin_types.h
